Añadiendo pagina music Obteniendo todos los archivos de musica y almacenandolos en un array (filesSong)

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,11 +26,11 @@
       <div class="song_content_overlay"></div>
     </div>
   </div>
-  <div class="items">
-    <div class="item">
+  <div class="items" >
+    <div class="item" (click)="musicDevice()">
       <ion-icon name="musical-notes"></ion-icon>
       <div class="item_content">
-        <span>En el dispositivo</span>
+        <span>En su dispositivo</span>
         <span>1 Canción</span>
       </div>
     </div>
