Creando diseño para la pagina music listando todos los archivos de musica en el dispositivo Mostrando las canciones en la vista música crenado los tests para la funcion de la funcion getFilesSong()

--- a/src/app/pages/music/music.page.html
+++ b/src/app/pages/music/music.page.html
@@ -8,5 +8,12 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let song of filesSong">
+      <ion-label (click)="playSong()">{{ song.name }}</ion-label>
+      <ion-buttons (click)="getOptions()">
+        <ion-icon name="md-more"></ion-icon>
+      </ion-buttons>
+    </ion-item>
+  </ion-list>
 </ion-content>
